Rerouting log out from all paths; realigning 'see more' link on profile page; linking profile images and cover photo on certain pages; fixing sql queries for friendships table.

--- a/myspice_app/static/css/account_settings.css
+++ b/myspice_app/static/css/account_settings.css
@@ -142,7 +142,7 @@
     box-shadow: 0px 0px 50px 50px rgba(0, 0, 0, 0.03);
     position: relative;
     bottom: 165px;
-    padding: 60px 0px;
+    padding: 60px 45px;
     background-color: white;
 }
 
