--- a/myspice_app/static/css/view_post.css
+++ b/myspice_app/static/css/view_post.css
@@ -174,7 +174,7 @@
 }
 
 #sns_links_div {
-    margin: 40px 40px 0px 40px;
+    margin: 40px 0px;
     gap: 40px;
 }
 
